--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<!-- Open Graph (OG) Meta Tags for Social Media Sharing -->
-		<meta property="og:title" content="Lucky Schrub" />
+		<meta property="og:title" content="Lucky Shrub" />
 		<meta
 			property="og:description"
 			content="Specializes in garden design and creation, maintenance and landscaping"
@@ -12,9 +12,9 @@
 		<!-- Replace with the appropriate URL -->
 		<meta property="og:image" content="Your_Image_URL_Here" />
 		<!-- Replace with the appropriate image URL -->
-		<meta property="og:site_name" content="Lucky Schrub" />
+		<meta property="og:site_name" content="Lucky Shrub" />
 		<meta property="og:locale" content="ES" />
-		<meta property="article:author" content="Jason and Maria, Lucky Schrub" />
+		<meta property="article:author" content="Jason and Maria, Lucky Shrub" />
 		<meta property="article:published_time" content="February 18, 2024" />
 
 		<!-- Metadata for character set, language, description, subject, copyright, date, keywords, and viewport -->
@@ -25,7 +25,7 @@
 			name="subject"
 			content="Specializes in garden design and creation, maintenance and landscaping"
 		/>
-		<meta name="copyright" content="Lucky Schrub" />
+		<meta name="copyright" content="Lucky Shrub" />
 		<meta name="date" content="Date of App" />
 		<meta
 			name="news_keywords"
@@ -41,71 +41,95 @@
 		<link rel="stylesheet" type="text/css" href="css/styles.css" media="all" />
 
 		<!-- Title of the document -->
-		<title>Lucky Schrub</title>
+		<title>Lucky Shrub</title>
 	</head>
 
 	<body>
 		<div class="container">
-			<header>
-				<img src="/img/Asset 2@3x.png" alt="Company Logo" srcset="" />
-				<h1>Lucky Schrub</h1>
+			<header class="header_container">
+				<div class="header_wrapper">
+					<div>
+						<img src="/img/asset_1-3_x.png" alt="Company Logo" srcset="" />
+						<h1>Lucky Shrub</h1>
+					</div>
+
+					<nav>
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="menu.html">Menu</a></li>
+							<li><a href="book.html">Book</a></li>
+							<li><a href="about.html">About Us</a></li>
+						</ul>
+					</nav>
+				</div>
 			</header>
-			<nav>
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="menu.html">Menu</a></li>
-					<li><a href="book.html">Book</a></li>
-					<li><a href="about.html">About Us</a></li>
-				</ul>
-			</nav>
-			<main>
-				<section>
-					<article>
-						<h2>Heading 1</h2>
-						<p>
-							Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius
-							accusantium nihil harum recusandae iusto rem non est voluptatum illum
-							aliquam quos, dolorum debitis expedita nulla explicabo ipsam quibusdam a
-							in.
-						</p>
-					</article>
+			<main class="main_container">
+				<section class="main_section_wrapper">
+					<div class="main_section_banner">
+						<div class="main_section_image_container">
+							<img
+								src="/img/tree-care-shrub-care.png"
+								alt=""
+								width="1000"
+								height="450"
+								srcset=""
+							/>
+						</div>
+						<div class="main_section_banner_promotion">
+							<h2>
+								Book a <strong>Free</strong> <br /><span>Consultation Today!</span>
+							</h2>
+							<p>
+								Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius
+								accusantium nihil harum recusandae iusto rem non est voluptatum illum
+								aliquam quos, dolorum debitis expedita nulla explicabo ipsam quibusdam a
+								in.
+							</p>
+							<button>Book Now</button>
+						</div>
+					</div>
 				</section>
-				<section>
-					<article>
-						<h3>Heading 2</h3>
-						<p>
-							Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius
-							accusantium nihil harum recusandae iusto rem non est voluptatum illum
-							aliquam quos, dolorum debitis expedita nulla explicabo ipsam quibusdam a
-							in.
-						</p>
-					</article>
-					<article>
-						<h3>Heading 3</h3>
-						<p>
-							Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius
-							accusantium nihil harum recusandae iusto rem non est voluptatum illum
-							aliquam quos, dolorum debitis expedita nulla explicabo ipsam quibusdam a
-							in.
-						</p>
-					</article>
-					<article>
-						<h3>Heading 4</h3>
-						<p>
-							Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius
-							accusantium nihil harum recusandae iusto rem non est voluptatum illum
-							aliquam quos, dolorum debitis expedita nulla explicabo ipsam quibusdam a
-							in.
-						</p>
-					</article>
+				<section class="main_section_article_container">
+					<div class="main_section_article_wrapper">
+						<article>
+							<h3>Heading 2</h3>
+							<p>
+								Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius
+								accusantium nihil harum recusandae iusto rem non est voluptatum illum
+								aliquam quos, dolorum debitis expedita nulla explicabo ipsam quibusdam a
+								in.
+							</p>
+						</article>
+						<article>
+							<h3>Heading 3</h3>
+							<p>
+								Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius
+								accusantium nihil harum recusandae iusto rem non est voluptatum illum
+								aliquam quos, dolorum debitis expedita nulla explicabo ipsam quibusdam a
+								in.
+							</p>
+						</article>
+						<article>
+							<h3>Heading 4</h3>
+							<p>
+								Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius
+								accusantium nihil harum recusandae iusto rem non est voluptatum illum
+								aliquam quos, dolorum debitis expedita nulla explicabo ipsam quibusdam a
+								in.
+							</p>
+						</article>
+					</div>
 				</section>
 			</main>
 			<footer>
-				<div>
-					<img src="/img/Asset 1@3x.png" alt="Company Logo" srcset="" />
-				</div>
-				<div class="copyright">
-					<p>Copyright Lucky Schrub &copy;</p>
+				<div class="footer_container">
+					<div>
+						<img src="/img/asset_1-3_x.png" alt="Company Logo" srcset="" />
+						<p>Lucky Shrub</p>
+					</div>
+					<div class="copyright">
+						<p>Copyright Lucky Shrub <span>&copy;</span></p>
+					</div>
 				</div>
 			</footer>
 		</div>
