Coursera Project Layout

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<!-- Favicon Link -->
-		<link rel="shortcut icon" type="image/ico" href="img/" />
+		<link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
 
 		<!-- Stylesheet links -->
 		<link rel="stylesheet" type="text/css" href="css/reset.css" media="all" />
@@ -123,7 +123,7 @@
 							</p>
 
 							<!-- Call-to-Action Button -->
-							<button aria-label="Book Now">Book Now</button>
+							<button type="submit" aria-label="Book Now">Book Now</button>
 						</div>
 						<!-- End Banner Promotion Content Container -->
 					</div>
@@ -218,27 +218,26 @@
 					<!-- End Wrapper for Article Content -->
 				</section>
 				<!-- Article Section End -->
+				<!-- Footer Section Start -->
+				<footer>
+					<div class="footer_container">
+						<!-- Footer Logo and Text Start -->
+						<div>
+							<img src="/img/asset_1-3_x.png" alt="Company Logo" />
+							<p>Lucky Shrub</p>
+						</div>
+						<!-- Footer Logo and Text End -->
+
+						<!-- Copyright Text Start -->
+						<div class="copyright">
+							<p>Copyright Lucky Shrub <span>&copy;</span></p>
+						</div>
+						<!-- Copyright Text End -->
+					</div>
+				</footer>
+				<!-- Footer Section End -->
 			</main>
 			<!-- Main Container End -->
-
-			<!-- Footer Section Start -->
-			<footer>
-				<div class="footer_container">
-					<!-- Footer Logo and Text Start -->
-					<div>
-						<img src="/img/asset_1-3_x.png" alt="Company Logo" />
-						<p>Lucky Shrub</p>
-					</div>
-					<!-- Footer Logo and Text End -->
-
-					<!-- Copyright Text Start -->
-					<div class="copyright">
-						<p>Copyright Lucky Shrub <span>&copy;</span></p>
-					</div>
-					<!-- Copyright Text End -->
-				</div>
-			</footer>
-			<!-- Footer Section End -->
 		</div>
 		<!-- Container End -->
 	</body>
